src/style.css
:root {
    /*
    --color-bg: #001010;
    --color-bg-hi: #294151;
    --color-fg: #DDEEEE;
    */
    --color-bg: #38230D;
    --color-fg: #FF9700;
    --color-green: #9A781E;
    --color-red: #DF3D00;
    --color-gray: #9D5200;
}

#layout-header {
    margin: 10px auto 10px auto;
    width: fit-content;
}

#layout-header p {
    font-family: "Roboto Mono", monospace;
}

#layout-container {
    max-width: 800px;
    width: calc(100% - 20px);
    margin-left: auto;
    margin-right: auto;
}

#layout-wrapper {
    display: flex;

    background: 
        linear-gradient(to bottom, var(--color-fg) 0px, rgba(0, 0, 0, 0) 80px),
        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--color-bg) 200px),
        url("assets/noise2.png");

    padding: 15px;
    /*background-size: 256px;*/
    image-rendering: pixelated;
    background-clip: padding-box;

}

#layout-buttons-list {
    padding-left: 1px;
}

#layout-side {
    min-width: 150px;
    width: 150px;
}

#layout-nav {
    height: fit-content;
}

#layout-main {
    width: 100%;
    flex-grow: 1;
    height: fit-content;
}

#layout-footer-banner {
    background-color: var(--color-green);
    color: var(--color-bg);
    margin: 1em -5px 0px -5px;
    padding: 0px 5px 0px 5px;

}

#layout-footer-banner p {
    color: var(--color-bg);
    font-family: "Roboto Mono", monospace;
}

html, body {
    height: 100%;
}

body {
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: column;
    min-height: 100vh;

    background-color: var(--color-bg);
}

.box {
    border: 6px double var(--color-fg);
    box-shadow: 0px 0px 0px 2px var(--color-bg);
    color: var(--color-fg);
    margin: 1px;
    margin-bottom: 2px;
    padding: 0px;
    background-color: var(--color-bg);
}

h1, h2, h3, h4, h5, h6, p, li, a {
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: var(--color-fg);
    margin: 0px;
    padding: 0px;
}

ul {
    margin: 0px;
    padding-left: 1.5rem;
}

a:hover {
    color: var(--color-bg);
    background-color: var(--color-fg);
}

h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: 800;
}

p ul {
    margin-bottom: 0.75rem;
}

.box-title {
    margin: 0px;
    padding: 5px;
    padding-top: 3px;
    background-color: var(--color-fg);

}

.box-title h2 {
    color: var(--color-bg);
    font-family: "Roboto Mono", monospace;
}

.box-content h1:first-child {
    margin-top: 0;
}

.box-content h1, .box-content h2, .box-content h3, .box-content h4 {
    margin-top: 1rem;

}

.box-content {
    margin: 0px;
    padding: 5px;
}

.box-content h1::before {
    content: "# ";
    color: var(--color-gray);
}

.box-content h2::before {
    content: "## ";
    color: var(--color-gray);
}

.box-content h3::before {
    content: "### ";
    color: var(--color-gray);
}

.box-content h4::before {
    content: "#### ";
    color: var(--color-gray);
}




/*
h1, h2, h3, h4, h5, h6 {
    background-color: var(--color-bg-hi);
    padding: 5px 5px 0px 5px;
    margin-bottom: 5px;
    border-radius: 3px;
}*/

